erDiagram
  USERS ||--o{ MEMBRES_GROUPE : possede
  GROUPES ||--o{ MEMBRES_GROUPE : contient
  GROUPES ||--o{ INVITATIONS_GROUPE : genere
  GROUPES ||--o{ CYCLES_TONTINE : organise
  CYCLES_TONTINE ||--o{ CYCLES_PARTICIPANTS : contient
  MEMBRES_GROUPE ||--o{ CYCLES_PARTICIPANTS : participe
  CYCLES_TONTINE ||--o{ COTISATIONS : recoit
  MEMBRES_GROUPE ||--o{ COTISATIONS : paie
  COTISATIONS ||--o{ PENALITES : genere
  CYCLES_TONTINE ||--o{ VERSEMENTS : distribue
  MEMBRES_GROUPE ||--o{ VERSEMENTS : beneficie
  GROUPES ||--o{ RUBRIQUES_COTISATION : definit
  RUBRIQUES_COTISATION ||--o{ PAIEMENTS_RUBRIQUE : encaisse
  MEMBRES_GROUPE ||--o{ PAIEMENTS_RUBRIQUE : paie
  GROUPES ||--o{ REUNIONS : planifie
  REUNIONS ||--o{ PRESENCES_REUNION : suit
  MEMBRES_GROUPE ||--o{ PRESENCES_REUNION : participe
  MEMBRES_GROUPE ||--o| COMPTES_EPARGNE : detient
  COMPTES_EPARGNE ||--o{ MOUVEMENTS_EPARGNE : historise
  GROUPES ||--o{ CAISSES_FINANCIERES : possede
  CAISSES_FINANCIERES ||--o{ MOUVEMENTS_FINANCIERS : journalise
  USERS ||--o{ NOTIFICATIONS_GROUPE : recoit
